UsabilityInitiative: (bug 22296) Empty scrollbars on changes view in Safari
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk/extensions/UsabilityInitiative@61619 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/css/combined.css
+++ b/css/combined.css
@@ -137,7 +137,6 @@ form#editform {
 	position: relative;
 	clear: both;
 	width: 100%;
-	line-height: 1em;
 	background-color: #f3f3f3;
 	border: solid silver 1px;
 }
@@ -221,6 +220,10 @@ body.rtl .wikiEditor-ui .wikiEditor-ui-right {
 }
 .wikiEditor-ui-tabs div.current a:hover {
 	text-decoration: none;
+}
+
+.wikiEditor-view-wikitext {
+	line-height: 1em;
 }
 /* wikiEditor dialogs module */
 
